# MyShell

./: settings.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/bb_sz/myshell/: MainActivity.java
app/src/main/java/com/bb_sz/ndk/: App.java  CSReceiver.java  GameFreeSwitchRun.java  Http.java  InstallReceiver.java  OTUtil.java  (+1 more)
app/src/main/jni/: fork.c  fork.h  log.h  reflex.h  shell.c  shortcut.c  sz_shell_a.c
gradle/wrapper/: gradle-wrapper.properties
jpaysdk/: build.gradle  proguard-project.txt
jpaysdk/src/main/: AndroidManifest.xml
jpaysdk/src/main/jni/: fork.c
jpaysdk_lt/: build.gradle  proguard-android.txt  proguard-project.txt
jpaysdk_lt/src/main/: AndroidManifest.xml
jpaysdk_lt/src/main/jni/: fork.c  fork.h  reflex.c  reflex.h
jpaysdk_lt/src/main/res/values/: strings.xml
jpaysdk_store/: build.gradle
jpaysdk_store/src/main/: AndroidManifest.xml
jpaysdk_store/src/main/jni/: fork.c  jpaysdk.c  shortcut.h
jpaysdk_store/src/main/res/xml/: setting_accessibility.xml
jpaysdk_wm/: build.gradle  proguard-android.txt  proguard-project.txt  public.xml
jpaysdk_wm/src/main/: AndroidManifest.xml
jpaysdk_wm/src/main/assets/: jmpay.xml  pay_point.txt  yf.conf
jpaysdk_wm/src/main/jni/: check.c  log.c  shortcut.c
jpaysdk_wm/src/main/res/values/: strings.xml
shell/: CMakeLists.txt  build.gradle  shell-release.apk
shell/src/main/: AndroidManifest.xml
shell/src/main/java/com/bb_sz/ndk/: App.java
shell/src/main/jni/: decode.c  decode.h  log.h  reflex.c  shell.c  sz_shell_a.c
shell/src/main/res/values/: strings.xml
(+101 files in other folders)
